# agent-ci

./: .agent-ci.yaml  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_CN.md  docker-compose.yml  pyproject.toml
.claude/rules/: checker-system.md  cli-and-reporting.md  core-pipeline.md  development-commands.md
.github/workflows/: ci.yml
scripts/: pre-release-check.sh  release.sh
src/agent_ci/: __init__.py  cli.py  config.py  pipeline.py  plugins.py  report.py  server.py  types.py
src/agent_ci/checkers/: __init__.py  base.py  diff.py  fact.py  schema.py
tests/: conftest.py  test_cli.py  test_diff_checker.py  test_fact_checker.py  test_pipeline.py  test_plugins.py  test_release_script.py  test_report.py  test_schema_checker.py  test_server.py
tests/fixtures/baseline/: summary.md
tests/fixtures/invalid_output/: secret.yaml
tests/fixtures/valid_output/: config.yaml  result.json
